[build-system]
requires = [
    "setuptools>=65",
    "wheel>=0.37.1",
    "setuptools-scm[toml]>=7.0.5",
]
build-backend = "setuptools.build_meta"

[project]
name = "gridfinder"
description = "Algorithm for guessing MV grid network based on night time lights"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
keywords = ["ntl", "electricity", "grid"]

authors = [
    {name = "Chris Arderne", email="chris@rdrn.me"},
]

dynamic = ["version"]

classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "affine ~= 2.4",
  "click ~= 8.0",
  "fiona ~= 1.9",
  "geopandas ~= 0.14",
  "numba ~= 0.58",
  "numpy ~= 1.26",
  "pandas ~= 2.2",
  "pillow ~= 10.2",
  "pyarrow ~= 15.0",
  "pyproj ~= 3.6",
  "rasterio ~= 1.3",
  "Rtree ~= 1.2",
  "scikit-image ~= 0.22",
  "scipy ~= 1.12",
  "Shapely ~= 2.0",
]

[project.optional-dependencies]
dev = [
  "descartes ~= 1.1.0",
  "folium ~= 0.15",
  "matplotlib ~= 3.8",
  "pytest ~= 8.0",
  "ruff ~= 0.2",
  "seaborn ~= 0.13",
]

[project.urls]
homepage = "https://gridfinder.rdrn.me"
repository = "https://github.com/carderne/gridfinder"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["gridfinder"]
exclude = ["docs*", "tests*"]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = []

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "U",
    "N",
    "E",
    "T100",
    "A",
    "Q",
    "ANN",
]

[tool.ruff.lint.isort]
known-first-party = ["gridfinder"]

[tool.pyright]
include = ["gridfinder"]
reportMissingImports = true
reportMissingParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
pythonVersion = "3.8"
