[tool.rye.scripts]
check = "pyright"
test = "pytest"
ex = "./examples/test.sh"

[project]
name = "gridfinder"
description = "Algorithm for guessing MV grid network based on night time lights"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.9"
keywords = ["ntl", "electricity", "grid"]

authors = [
  {name = "Chris Arderne", email="chris@rdrn.me"},
]

dynamic = ["version"]

classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "affine ~= 2.4",
  "click ~= 8.0",
  "fiona ~= 1.9",
  "geopandas ~= 0.14",
  "numba ~= 0.58",
  "numpy ~= 1.26",
  "pandas ~= 2.2",
  "pillow ~= 10.2",
  "pyarrow ~= 15.0",
  "pyproj ~= 3.6",
  "rasterio ~= 1.3",
  "Rtree ~= 1.2",
  "scikit-image ~= 0.22",
  "scipy ~= 1.12",
  "Shapely ~= 2.0",
]

[tool.rye]
managed = true
dev-dependencies = [
  "pyright",
  "pytest",
  "descartes ~= 1.1.0",
  "folium ~= 0.15",
  "matplotlib ~= 3.8",
  "pytest ~= 8.0",
  "ruff ~= 0.2",
  "seaborn ~= 0.13",
  "jupyterlab ~= 4.1",
]

[project.urls]
homepage = "https://gridfinder.rdrn.me"
repository = "https://github.com/carderne/gridfinder"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["gridfinder/"]

[tool.pdm.version]
source = "scm"

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = []

[tool.ruff.lint]
ignore-init-module-imports = true
select = [
    "F",
    "E",
    "I",
    "U",
    "N",
    "E",
    "T100",
    "A",
    "Q",
    "ANN",
]

[tool.ruff.lint.isort]
known-first-party = ["gridfinder"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["gridfinder", "tests"]
reportMissingImports = true
reportMissingParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
pythonVersion = "3.10"
